# Local-Segment-AStar-Replanner

./: README.md
local_segment_astar_replanner/: CMakeLists.txt  package.xml
local_segment_astar_replanner/GridMap2D/include/plan_env/: grid_map.h
local_segment_astar_replanner/include/: trajectory_obstacles_publisher.h
local_segment_astar_replanner/manager/: CMakeLists.txt
local_segment_astar_replanner/manager/include/: manager.h
local_segment_astar_replanner/manager/src/: manager.cpp
local_segment_astar_replanner/path_searching/: CMakeLists.txt
local_segment_astar_replanner/path_searching/include/path_searching/: dyn_a_star.h
local_segment_astar_replanner/path_searching/src/: dyn_a_star.cpp
local_segment_astar_replanner/src/: trajectory_publisher.cpp
